overflow-x fixed for phone

--- a/src/main/webapp/src/index.css
+++ b/src/main/webapp/src/index.css
@@ -66,6 +66,9 @@ code {
 }
 
 @media only screen and (max-width: 800px) {
+  #root {
+    overflow-x: hidden;
+  }
   #weisBtn {
     margin: 10px
   }
